--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "react-lazy-load-image-component": "^1.5.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.15.4",
     "eslint": "^7.31.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.8.0",
+    "eslint-plugin-flowtype": "^5.9.2",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "next": "10.0.5",
+    "next": "^11.1.1",
     "sass": "^1.35.2"
   }
 }
